# wwwvm

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  temp
.github/workflows/: ci.yml  pages.yml
crates/cpu/: Cargo.toml
crates/cpu/src/: f80.rs  lib.rs  tests.rs
crates/devices/: Cargo.toml
crates/devices/src/: ata.rs  cmos.rs  disk.rs  keyboard.rs  lib.rs  pci.rs  pic.rs  pit.rs  rtl8139.rs  scancode.rs  uart.rs
crates/mem/: Cargo.toml
crates/mem/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: allow.rs  device.rs  dns.rs  forwarder.rs  lib.rs  nat.rs  queue.rs  relay.rs  switch.rs  util.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: main.rs  upstream.rs
crates/snapstore/: Cargo.toml
crates/snapstore/src/: http.rs  lib.rs
crates/vm/: Cargo.toml
crates/vm/examples/: alpine_console.rs  busybox_console.rs  dump_export.rs  linux_boot.rs  snapshot_resume.rs  throughput.rs  two_vm_lan.rs
crates/vm/src/: bzimage.rs  elf.rs  lan.rs  lib.rs  tests.rs
crates/vm/tests/: framebuffer.rs  linux_userspace.rs  tutorial_examples.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: BROWSER_ALPINE.md  BROWSER_NET.md  BUILD.md  DEPLOY.md  EMBED.md  GUI_X.md  HAND_ASSEMBLY.md  MILESTONES.md  NET_BRIDGE_DESIGN.md  net-bridge-concurrency-design.md
scripts/: build-web-images.sh  deploy-beget.sh  fetch-alpine-assets.sh  fetch-proxies.py  guest-startx.sh  test-web-js.sh
web/: demo-link.js  demo-link.test.mjs  demo-presets.js  demo-presets.test.mjs  embed-example.html  index.html  l2-switch.js  lan.html  lan.js  main.js  net-route.js  net-route.test.mjs  package.json  ps2-keymap.js  ps2-keymap.test.mjs  snapshot-store.js  snapshot-store.test.mjs  storage.js  style.css  vm-worker.js  wwwvm.js
