[package]
name = "wwwvm-net"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
] }
