[package]
name = "wwwvm-proxy"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "wwwvm-proxy"
path = "src/main.rs"

[dependencies]
wwwvm-net = { path = "../net" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { workspace = true }
env_logger = "0.11"
anyhow = "1"
