[package]
name = "wwwvm-snapstore"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "snapstore-server"
path = "src/bin/snapstore-server.rs"

[dependencies]
# Content-addressing: a page's name IS its blake3 hash, verified on write.
blake3 = { version = "1", default-features = false }
# The HTTP service binary (the lib's routing logic is transport-agnostic).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
log = { workspace = true }
env_logger = "0.11"
