[package]
name = "wwwvm-vm"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
wwwvm-cpu = { path = "../cpu" }
wwwvm-mem = { path = "../mem" }
wwwvm-devices = { path = "../devices" }

[dev-dependencies]
# Used only by the interactive console examples (alpine_console / busybox_console)
# to put the HOST terminal into raw mode (termios) so keystrokes aren't
# double-echoed and cursor-position-report replies don't leak onto the prompt.
libc = "0.2"
