[package]
name = "wwwvm-vm"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
wwwvm-cpu = { path = "../cpu" }
wwwvm-mem = { path = "../mem" }
wwwvm-devices = { path = "../devices" }
# Content-addressed page hashing for paged snapshot diffs. default-features off
# → the portable no_std impl, so the wasm build stays clean.
blake3 = { version = "1", default-features = false }

[dev-dependencies]
# Used only by the interactive console examples (alpine_console / busybox_console)
# to put the HOST terminal into raw mode (termios) so keystrokes aren't
# double-echoed and cursor-position-report replies don't leak onto the prompt.
libc = "0.2"
# The host-side networking bridge (DNS forwarder, allowlist) — used by the
# alpine_console example's WWWVM_NET_STUB path. A dev-dependency so the vm
# *library* stays free of the bridge's deps.
wwwvm-net = { path = "../net" }
