[package]
name = "wwwvm-wasm"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "In-browser x86 PC emulator (boots Linux) — wasm bindings for the wwwvm VM. See docs/EMBED.md."
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wwwvm-vm = { path = "../vm" }
wwwvm-net = { path = "../net" }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
